# flux

./: Cargo.toml  README.md  justfile
crates/cli/src/: cli.rs  main.rs
crates/client/cli/: Cargo.toml
crates/client/cli/src/: cli.rs  commands.rs  main.rs
crates/client/core/: Cargo.toml
crates/client/core/src/: error.rs  lib.rs  utils.rs
crates/client/core/src/commands/: diff.rs  mod.rs  status.rs
crates/client/core/src/diff/: diff_impl.rs  mod.rs
crates/client/core/src/internals/: config.rs  grpc_client.rs  index.rs  mod.rs  object_store.rs  refs.rs  repository.rs  work_tree.rs
crates/client/core/src/objects/: blob.rs  commit.rs  mod.rs  object_type.rs  tree.rs
crates/client/core/src/status/: mod.rs  status_formatter.rs  status_impl.rs
crates/client/core/tests/: integration_test.rs  utils_test.rs
crates/client/core/tests/common/: mod.rs
crates/client/desktop-app/: package.json  pnpm-lock.yaml
crates/client/desktop-app/src/: App.css  App.tsx
crates/client/desktop-app/src-tauri/src/: commands.rs  main.rs  models.rs
crates/client/desktop-app/src/assets/icons/: index.ts
crates/client/desktop-app/src/config/: AppRoutes.tsx
crates/client/desktop-app/src/constants/: index.ts
crates/client/desktop-app/src/models/: Repository.ts
crates/core/src/: commands.rs  error.rs  lib.rs  utils.rs
crates/core/src/internals/: config.rs  index.rs  object_store.rs  refs.rs  repository.rs  work_tree.rs
crates/core/src/objects/: commit.rs  object_type.rs
crates/core/src/repo/: mod.rs  object_store.rs  repository.rs  work_tree.rs
crates/core/tests/: integration_test.rs
crates/desktop-app/src-tauri/src/: commands.rs  models.rs
crates/desktop-app/src/components/Menu/: Menu.css
crates/proto/: Cargo.toml  build.rs
crates/proto/schemas/: models.proto
crates/proto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: cli.rs  error.rs  main.rs  user_store.rs
crates/server/src/services/: auth_service.rs  clone_service.rs  mod.rs  push_service.rs
src/: cli.rs  commands.rs  lib.rs  main.rs  utils.rs
src/objects/: blob.rs  commit.rs  tree.rs
src/repo/: config.rs  index.rs  mod.rs  object_type.rs  repository.rs  utils.rs
src/shared/types/: mod.rs  object_type.rs
src/traits/: mod.rs
tests/: integration_test.rs  utils_test.rs
(+11 files in other folders)
