[package]
name = "flux_server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.12", features = ["transport"] }
proto = { path = "../proto" }
async-trait = "0.1"
futures = "0.3.31"
clap = { version = "4.5.53", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

[[bin]]
name = "flux_server"
