[package]
name = "flux-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "flux_core"
path = "src/lib.rs"

[dependencies]
proto ={ path = "../../proto"}
tonic = "0.12"
anyhow = "1.0.100"
chrono = "0.4.42"
flate2 = "1.1.5"
hex = "0.4.3"
json = "0.12.4"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
thiserror = "2.0.18"
toml = "0.9.8"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tar = "0.4.44"
url = "2.5.8"

[dev-dependencies]
serial_test = "3.2.0"
tempfile = "3.24.0"
